export const testIds = {
  bookmark: {
    button: (id: number) => `bookmark-button-${id}`,
    container: 'bookmark-container',
  },
  storyItem: {
    row: (id: number) => `story-item-${id}`,
    list: 'stories-list',
  },
  home: {
    screen: 'home-screen',
    loading: 'home-loading',
  },
  storyDetail: {
    screen: 'story-detail-screen',
  },
};
