...
            style={
              isBookmarked
                ? [styles.bookmarkText, styles.bookmarkTextActive]
                : styles.bookmarkText
            }
          >
            {isBookmarked ? 'Bookmarked' : 'Add Bookmark'}
          </AppText>
        </Pressable>
      </View>
    </View>
  );
};
...
